Fix timeline spacing issues in web view

--- a/src/Components/Timeline/Timeline.css
+++ b/src/Components/Timeline/Timeline.css
@@ -212,13 +212,13 @@
 
   .timeline-node {
     position: absolute;
-    top: 0;
     left: 18px;
     width: 20px;
     height: 20px;
     background-color: #2774ae;
     border-radius: 50%;
     z-index: 2;
+    top: 0 !important;
   }
 
   .timeline-card-container {
@@ -242,7 +242,7 @@
   .timeline-card-container.left {
     width: 100%;
     padding: 15px;
-    margin-left: 11px;
+    margin-left: 16px;
     text-align: left;
   }
 
@@ -301,11 +301,13 @@
     right: 0;
     left: -10px;
     text-align: left;
+    top: -20px !important;
   }
 
   .timeline-date-blurb.right {
     left: -9px;
     text-align: left;
+    top: -20px !important;
   }
 
   .card-company {
